# mousetumor-annotation-net

./: .gitignore  .pre-commit-config.yaml  architectures.py  dataset_generation.py  download_scans.py  main.py  mesh_viewer.py  pyproject.toml  testing.py  training.py  tumor_shape_study.py
