[project]
name = "mousetumor-annotation-net"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "monai>=1.5.2",
    "napari[all]>=0.6.6",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.1",
]
