[project]
name = "mousetumor-annotation-net"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "edt>=3.1.0",
    "grpcio==1.71.0",
    "ipython>=8.38.0",
    "itk>=5.4.5",
    "line-profiler>=5.0.1",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.8",
    "monai>=1.5.2",
    "mplcursors>=0.7",
    "napari[all]>=0.6.6",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "pyvista>=0.47.0",
    "scikit-image>=0.25.2",
    "seaborn>=0.13.2",
    "setuptools==80.8.0",
    "tensorboard>=2.20.0",
    "trimesh>=4.11.2",
    "typer>=0.24.0",
]

[dependency-groups]
dev = [
    "napari-data-inspection>=1.0.3",
    "pre-commit>=4.5.1",
    "ruff>=0.15.1",
]
